(library
 (name compiler)
 (libraries core)
 (preprocess (pps ppx_jane ppx_deriving.show))
 (modules
   Prelude
   PrettyPrinter
   STLC
   Annotated
   Annotate
   Lifted
   Lift
   TAC
   Translate
   Example
   Cmm
   CmmBackend
   )
 )

(env
 (dev
  (flags
   (:standard -w -unused-open)
   (:standard -warn-error -A)
)))
