(library
 (name compiler)
 (libraries core)
 (preprocess (pps ppx_jane ppx_deriving.show))
 (modules
   Prelude
   PrettyPrinter
   STLC
   Annotated
   Annotate
   Lifted
   Lift
   TAC
   Translate
   Example
   Cmm
   CmmBackend
   Lex
   Token
   RecursiveDescent
   )
 )

(rule
 (target Lex.ml)
 (deps   Lex.mll)
 (action (chdir %{workspace_root}
          (run %{bin:ocamllex} -q -o %{target} %{deps}))))

(env
 (dev
  (flags
   (:standard -w -unused-open)
   (:standard -warn-error -A)
)))
